Modified copy on 'why is this important?' section for readability and to add whitespace. Fixed alignment of divs on media query.

--- a/style.css
+++ b/style.css
@@ -2,13 +2,24 @@
 	font-family: helvetica, sans-serif;
 }
 
+.header {
+	text-align: center;
+	background: rgba(107, 175, 250, 0.25);
+	background-size: cover;
+	color: black;
+}
 .welcome {
-	height: 50%;
-	width: 35%;
+	height: 75%;
+	width: 45%;
+	margin-left: auto;
+  margin-right: auto;
+  display: block;
 }
 
 .title {
 	text-align: center;
+	margin-top: 1.5em;
+	font-size: 3em;
 }
 
 .description {
@@ -21,15 +32,38 @@
 	vertical-align: top;
 	background: rgba(179, 208, 242, 0.5);
 	margin-top: 3em;
+	padding: 1em;
 }
 
 .what {
+	margin-left: 1.5em;
 	margin-right: 5em;
+	margin: 0 auto;
+	margin-bottom: 5em;
 }
 
-button, .welcome {
-	margin-top: 8em;
+.why {
+	margin: 0 auto;
+}
+
+.what, .why {
+	border: 0.25em solid #849BB5;
+  border-radius: 0.25em;
+}
+
+button {
+	margin-bottom: 0.5em;
 	display: block;
-  margin-left: auto;
-  margin-right: auto;
+  margin: 0 auto;
+}
+
+@media(max-width: 700px) {
+	.description section {
+		display: block;
+		margin: 0 auto 3em;
+		padding: 1em;
+	}
+	.title {
+		font-size: 2.25em;
+	}
 }
